# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\CharacterController;
 use App\Http\Controllers\MusicController;
+use App\Http\Controllers\FactionController;
 
 /*
 |--------------------------------------------------------------------------
@@ -28,6 +29,10 @@ Route::middleware('jwt.auth')->group(function () {
 });
 
 Route::get('/saved-music', [MusicController::class, 'getAllSavedMusic']);
+Route::prefix('factions')->group(function () {
+    Route::get('/', [FactionController::class, 'index']); // Get all factions
+    Route::get('/{factionID}/items', [FactionController::class, 'getItems']); // Get items for a faction
+});
 
 Route::get('/profile', function (Request $request) {
     return response()->json([
